--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 fast-socks5 = "0.9.6"
 log = "0.4.14"
 env_logger = "0.11.3"
-structopt = "0.3.24"
+clap = { version = "4.5.9", features = ["derive", "env"] }
 tokio = { version = "1", features = [
     "io-util",
     "net",
