--- a/.github/workflows/flist.yaml
+++ b/.github/workflows/flist.yaml
@@ -45,4 +45,4 @@ jobs:
         action: publish
         user: iwantf.3bot
         root: archive
-        name: zsocks-${{ github.sha }}.flist
+        name: zsocks-${{ github.event.release.tag_name }}.flist
